--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 
   /*background: color image repeat */
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -175,4 +176,15 @@ footer {
   padding: 24px 0;
   font-size: 14px;
   text-align: center;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
